tests/NormalTests/paczka1/small_fuzzy/26588570.err
Error in line 1: zcA4cn8z S582 53,3
Error in line 12: G8Q A184 66,3
